# src/seekstorm_server/openapi/openapi.json
@@ -11,7 +11,7 @@
       "name": "Apache-2.0",
       "identifier": "Apache-2.0"
     },
-    "version": "1.0.0"
+    "version": "1.1.0"
   },
   "servers": [
     {
@@ -303,6 +303,17 @@
                     ],
                     "description": "Set number of shards manually or automatically.\n- none: number of shards is set automatically = number of physical processor cores (default)\n- small: slower indexing, higher latency, slightly higher throughput, faster realtime search, lower RAM consumption\n- large: faster indexing, lower latency, slightly lower throughput, slower realtime search, higher RAM consumption",
                     "minimum": 0
+                  },
+                  "spelling_correction": {
+                    "oneOf": [
+                      {
+                        "type": "null"
+                      },
+                      {
+                        "$ref": "#/components/schemas/SpellingCorrection",
+                        "description": "Enable spelling correction for search queries using the SymSpell algorithm.\nWhen enabled, a SymSpell dictionary is incrementally created during indexing of documents and stored in the index.\nIn addition you need to set the parameter `query_rewriting` in the search method to enable it per query.\nThe creation of an individual dictionary derived from the indexed documents improves the correction quality compared to a generic dictionary.\nAn dictionary per index improves the privacy compared to a global dictionary derived from all indices.\nThe dictionary is deleted when delete_index or clear_index is called.\nNote: enabling spelling correction increases the index size, indexing time and query latency.\nDefault: None. Enable by setting a value for max_dictionary_edit_distance (1..2 recommended).\nThe higher the value, the higher the number of errors taht can be corrected - but also the memory consumption, lookup latency, and the number of false positives."
+                      }
+                    ]
                   }
                 }
               }
@@ -1283,6 +1294,9 @@
                   },
                   "query_type_default": {
                     "$ref": "#/components/schemas/QueryType"
+                  },
+                  "query_rewriting": {
+                    "$ref": "#/components/schemas/QueryRewriting"
                   }
                 }
               }
@@ -3055,6 +3069,144 @@
         ],
         "description": "Defines the query facets:\n- string facet field values\n- range segments for numerical facet field values"
       },
+      "QueryRewriting": {
+        "oneOf": [
+          {
+            "type": "string",
+            "description": "Query rewriting disabled, returs query results for query as-is, returns no suggestions for misspelled query terms.\nNo performance overhead for spelling correction and suggestions.",
+            "enum": [
+              "SearchOnly"
+            ]
+          },
+          {
+            "type": "object",
+            "description": "Query rewriting disabled, returns query results for spelling original query string, returns suggestions for misspelled query terms.\nAdditional latency for spelling suggestions.",
+            "required": [
+              "SearchSuggest"
+            ],
+            "properties": {
+              "SearchSuggest": {
+                "type": "object",
+                "description": "Query rewriting disabled, returns query results for spelling original query string, returns suggestions for misspelled query terms.\nAdditional latency for spelling suggestions.",
+                "required": [
+                  "distance"
+                ],
+                "properties": {
+                  "distance": {
+                    "type": "integer",
+                    "description": "The edit distance thresholds for suggestions: 1..2 recommended; higher values increase latency and memory consumption.",
+                    "minimum": 0
+                  },
+                  "term_length_threshold": {
+                    "type": [
+                      "array",
+                      "null"
+                    ],
+                    "items": {
+                      "type": "integer",
+                      "minimum": 0
+                    },
+                    "description": "Term length thresholds for each edit distance.\n  None\t      max_dictionary_edit_distance for all terms lengths\n  Some([4])   max_dictionary_edit_distance for all terms lengths >= 4,\n  Some([2,8]) max_dictionary_edit_distance for all terms lengths >=2, max_dictionary_edit_distance +1 for all terms for lengths>=8"
+                  },
+                  "length": {
+                    "type": [
+                      "integer",
+                      "null"
+                    ],
+                    "description": "The second parameter is the maximum number of suggestions to return.",
+                    "minimum": 0
+                  }
+                }
+              }
+            }
+          },
+          {
+            "type": "object",
+            "description": "Query rewriting enabled, returns query results for spelling corrected query string, returns suggestions for misspelled query terms.\nAdditional latency for spelling correction and suggestions.",
+            "required": [
+              "SearchCorrect"
+            ],
+            "properties": {
+              "SearchCorrect": {
+                "type": "object",
+                "description": "Query rewriting enabled, returns query results for spelling corrected query string, returns suggestions for misspelled query terms.\nAdditional latency for spelling correction and suggestions.",
+                "required": [
+                  "distance"
+                ],
+                "properties": {
+                  "distance": {
+                    "type": "integer",
+                    "description": "The edit distance thresholds for suggestions: 1..2 recommended; higher values increase latency and memory consumption.",
+                    "minimum": 0
+                  },
+                  "term_length_threshold": {
+                    "type": [
+                      "array",
+                      "null"
+                    ],
+                    "items": {
+                      "type": "integer",
+                      "minimum": 0
+                    },
+                    "description": "Term length thresholds for each edit distance.\n  None\t max_dictionary_edit_distance for all terms lengths\n  Some([4])   max_dictionary_edit_distance for all terms lengths >= 4,\n  Some([2,8]) max_dictionary_edit_distance for all terms lengths >=2, max_dictionary_edit_distance +1 for all terms for lengths>=8"
+                  },
+                  "length": {
+                    "type": [
+                      "integer",
+                      "null"
+                    ],
+                    "description": "The second parameter is the maximum number of suggestions to return.",
+                    "minimum": 0
+                  }
+                }
+              }
+            }
+          },
+          {
+            "type": "object",
+            "description": "Query rewriting disabled, returns no query results, only suggestions for misspelled query terms.",
+            "required": [
+              "SuggestOnly"
+            ],
+            "properties": {
+              "SuggestOnly": {
+                "type": "object",
+                "description": "Query rewriting disabled, returns no query results, only suggestions for misspelled query terms.",
+                "required": [
+                  "distance"
+                ],
+                "properties": {
+                  "distance": {
+                    "type": "integer",
+                    "description": "The edit distance thresholds for suggestions: 1..2 recommended; higher values increase latency and memory consumption.",
+                    "minimum": 0
+                  },
+                  "term_length_threshold": {
+                    "type": [
+                      "array",
+                      "null"
+                    ],
+                    "items": {
+                      "type": "integer",
+                      "minimum": 0
+                    },
+                    "description": "Term length thresholds for each edit distance.\n  None\tmax_dictionary_edit_distance for all terms lengths\n  Some([4])   max_dictionary_edit_distance for all terms lengths >= 4,\n  Some([2,8]) max_dictionary_edit_distance for all terms lengths >=2, max_dictionary_edit_distance +1 for all terms for lengths>=8"
+                  },
+                  "length": {
+                    "type": [
+                      "integer",
+                      "null"
+                    ],
+                    "description": "The second parameter is the maximum number of suggestions to return.",
+                    "minimum": 0
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "description": "Specifies whether query rewriting is enabled or disabled"
+      },
       "QueryType": {
         "type": "string",
         "description": "Specifies the default QueryType: The following query types are supported:\n- **Union** (OR, disjunction),\n- **Intersection** (AND, conjunction),\n- **Phrase** (\"\"),\n- **Not** (-).\n\nThe default QueryType is superseded if the query parser detects that a different query type is specified within the query string (+ - \"\").",
@@ -3443,6 +3595,9 @@
           },
           "query_type_default": {
             "$ref": "#/components/schemas/QueryType"
+          },
+          "query_rewriting": {
+            "$ref": "#/components/schemas/QueryRewriting"
           }
         }
       },
@@ -3545,6 +3700,31 @@
           "Ascending",
           "Descending"
         ]
+      },
+      "SpellingCorrection": {
+        "type": "object",
+        "description": "Defines spelling correction (fuzzy search) settings for an index.",
+        "required": [
+          "max_dictionary_edit_distance"
+        ],
+        "properties": {
+          "max_dictionary_edit_distance": {
+            "type": "integer",
+            "description": "The edit distance thresholds for suggestions: 1..2 recommended; higher values increase latency and memory consumption.",
+            "minimum": 0
+          },
+          "term_length_threshold": {
+            "type": [
+              "array",
+              "null"
+            ],
+            "items": {
+              "type": "integer",
+              "minimum": 0
+            },
+            "description": "Term length thresholds for each edit distance.\n  None\tmax_dictionary_edit_distance for all terms lengths\n  Some([4])   max_dictionary_edit_distance for all terms lengths >= 4,\n  Some([2,8]) max_dictionary_edit_distance for all terms lengths >=2, max_dictionary_edit_distance +1 for all terms for lengths>=8"
+          }
+        }
       },
       "StemmerType": {
         "type": "string",
